data/derived/comb/progs/unify/prog7973.ml.out
Characters 133-137:
  let seen' = if List.mem h seen then h@seen else seen in 
                                        ^^^^
Error: This expression has type 'a list list
       but an expression was expected of type 'a list
       The type variable 'a occurs inside 'a list
